2014-10-15         Arnold D. Robbins     <arnold@skeeve.com>

	* gawk.1: Fix default value for AWKLIBPATH.
	* gawktexi.in: Revised text for AWKPATH and AWKLIBPATH.

2014-10-14         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Add new Foreword from Mike Brennan.

2014-10-13         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Fix example outputs in chapter 2.
	Improve description of SYMTAB.

2014-10-12         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Revise doc for {INT,STR}_CHAIN_MAX. Remove Pat
	Rankin from VMS duties (per his request). Add a small TeX fix
	for the table in ch 16 for requesting values.

2014-10-05         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Finished changes!

2014-10-03         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in (EMRED): Renamed from EMISTERED to match original.
	Thanks to Warren Toomey at TUHS for access to archives recording
	the text.

2014-10-02         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Pretty much done!

2014-10-01         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: More fixes after reading through the MS.

2014-09-30         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: More fixes after reading through the MS.

2014-09-29         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: More fixes after reading through the MS.
	And still more fixes.

2014-09-28         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: More fixes after reading through the MS.
	Document the debugger's "where" command.

2014-09-27         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Lots more fixes after reading through the MS.

2014-09-23         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Rework the documentation of special files in
	Chapter 5; some reordering as well as rewriting.

2014-09-22         Arnold D. Robbins     <arnold@skeeve.com>
