@@ -20551,8 +20551,8 @@ File: gawk.info,  Node: Gawk I18N,  Next: I18N Summary,  Prev: I18N Example,  Up
 `gawk' itself has been internationalized using the GNU `gettext'
 package.  (GNU `gettext' is described in complete detail in *note (GNU
 `gettext' utilities)Top:: gettext, GNU gettext tools.)  As of this
-writing, the latest version of GNU `gettext' is version 0.19.2
-(ftp://ftp.gnu.org/gnu/gettext/gettext-0.19.2.tar.gz).
+writing, the latest version of GNU `gettext' is version 0.19.3
+(ftp://ftp.gnu.org/gnu/gettext/gettext-0.19.3.tar.gz).
 
    If a translation of `gawk''s messages exists, then `gawk' produces
 usage messages, warnings, and fatal errors in the local language.
