@@ -1228,7 +1228,7 @@ March, 2001
       <!-- can't put mawk into command tags. sigh. -->
       <affiliation><jobtitle>Author of mawk</jobtitle></affiliation>
     </author>
-    <date>March, 2001</date>
+    <date>October, 2014</date>
    </prefaceinfo>
 @end docbook
 
@@ -28828,8 +28828,8 @@ complete detail in
 @cite{GNU gettext tools}}.)
 @end ifnotinfo
 As of this writing, the latest version of GNU @command{gettext} is
-@uref{ftp://ftp.gnu.org/gnu/gettext/gettext-0.19.2.tar.gz,
-@value{PVERSION} 0.19.2}.
+@uref{ftp://ftp.gnu.org/gnu/gettext/gettext-0.19.3.tar.gz,
+@value{PVERSION} 0.19.3}.
 
 If a translation of @command{gawk}'s messages exists,
 then @command{gawk} produces usage messages, warnings,
