@@ -1,3 +1,9 @@
+2014-10-17         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* gawktexi.in: Fix date in docbook attribution for new Foreword;
+	thanks to Antonio Columbo for the catch.  Update latest version
+	of gettext.
+
 2014-10-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawk.1: Fix default value for AWKLIBPATH.
